Add meta description

--- a/traversy-video-background/index.html
+++ b/traversy-video-background/index.html
@@ -6,6 +6,7 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta name="theme-color" content="#03a9f4" />
+   <meta name="description" content="A dummy landing page for a travel website">
    <title>Travel Landing Page</title>
 
    <link rel="stylesheet" href="style.css">
